# Indian-options-trading-algorithm

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PLAN.md  README.md  RESEARCH.md  RUN.md  SETUP.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  (+1 more)
config/: broker.env.example  default.toml  ml_gate.json
docs/: 01-strategy.md  02-capital-setup.md  03-compliance.md  04-risk-management.md  05-costs-and-taxes.md  06-backtesting-and-validation.md  07-compounding-roadmap.md  08-code-architecture.md  09-ec2-deployment.md  10-first-backtest-findings.md  11-intraday-backtest-findings.md  12-where-the-edge-actually-is.md  13-futures-and-hybrids.md  14-momentum-the-one-real-edge.md  15-indicator-search.md  16-exhaustive-sweep.md  17-the-6L-50pct-question.md  18-the-verdict.md  19-ml-has-no-edge.md
tests/: conftest.py  test_alerts.py  test_angel_history.py  test_angelone_feed.py  test_bhavcopy.py  test_calendar.py  test_config.py  test_costs.py  test_credentials.py  test_data.py  test_engine.py  test_evaluator.py  test_fills.py  test_hold_to_expiry.py  test_indicators.py  test_instruments.py  test_intraday_condor.py  test_intraday_only.py  test_intraday_strangle.py  test_killswitch.py  test_metrics.py  test_ml_gated_strangle.py  test_ml_study.py  test_momentum.py  test_nifty_membership.py  test_overfit_stats.py  test_paper_broker.py  test_paper_loop.py  test_reference_condor.py  test_search_grid.py  test_search_runner.py  test_short_strangle.py  test_strategy_search.py  test_walk_forward.py
(+52 files in other folders)
