[project]
name = "optionsbot"
version = "0.1.0"
description = "Automated defined-risk options trading system for Indian markets (NIFTY/SENSEX)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
paper = ["smartapi-python>=1.4", "pyotp>=2.9", "logzero", "websocket-client"]
# Offline research only (docs/19 ML study). Deliberately NOT a runtime dependency:
# the bot and the EC2 box run on the standard library, and nothing under this extra
# is ever imported by the paper loop or the live strategies.
research = ["numpy>=2", "scikit-learn>=1.5", "scipy>=1.11"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
